<resources>
    <string name="app_name">Salesperson Tracker</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome Back!</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="hint_register">not a registered salesperson?</string>
    <string name="hint_signup">Signup</string>

</resources>
